[gd_scene load_steps=5 format=3 uid="uid://pqvttmiwgmtd"]

[ext_resource type="Theme" uid="uid://c2yman7v5w4a2" path="res://UI/Themes/woody/woody_animal_carousel.tres" id="1_lekki"]
[ext_resource type="Script" uid="uid://ci2jo0lc8n30t" path="res://UI/animal_carousel_element.gd" id="2_0b4fi"]
[ext_resource type="Texture2D" uid="uid://cyek4s2l7y882" path="res://Animals/icons/kordofan-giraffe.png" id="2_1s6x4"]
[ext_resource type="Texture2D" uid="uid://bdlat08gi440a" path="res://UI/Icons/gendericon_female.png" id="3_0x2u2"]

[node name="AnimalCarouselElement" type="PanelContainer"]
custom_minimum_size = Vector2(140, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -100.0
offset_right = 70.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_lekki")
script = ExtResource("2_0b4fi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AnimalIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_1s6x4")
stretch_mode = 5

[node name="AnimalSpecies" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Girafa de Kordofan"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="GenderIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("3_0x2u2")
stretch_mode = 5
